home-cluster/traefik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    kubernetes.io/metadata.name: traefik
