home-cluster/traefik/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: traefik-default-egress
  namespace: traefik
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - {}
